--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "jest": "^27.0.4"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
